Basic framework (title)

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-
+<DOCTYPE! html>
+  <html>
+    <head>
+      <title>Shreyas's Website</title>
+      <link rel="stylesheet" href="stylesheet.css">
+      <script src="js/anim.js"></script>
+    </head>
+    <body>
+      <div class="hero">
+        <h1>Shreyas Lad</h1>
+      </div>
+      
+      
+    </body>
+  </html>
