--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
       <title>Shreyas's Website</title>
       <link rel="stylesheet" href="stylesheet.css">
       <script src="js/anim.js"></script>
+      <script src="js/bg.js"></script>
     </head>
     <body>
       <div class="hero">
